hard-gists/d4ffebb452fe738b8aaa8005fc08a068/run.log
=== Docker Run Log for d4ffebb452fe738b8aaa8005fc08a068 ===
Started at: Mi 29. Okt 20:25:32 CET 2025

[2025-10-29 20:25:32] START: Running container for d4ffebb452fe738b8aaa8005fc08a068
[2025-10-29 20:25:33] SUCCESS: Container 2a33aff1b4de660268fbd2c494ef4dcdfa8532a82ae50847a7da5bf5f89a2b20 started for d4ffebb452fe738b8aaa8005fc08a068
=== Container logs for d4ffebb452fe738b8aaa8005fc08a068 ===
  File "/snippet.py", line 76
    print alpha, class_weight, this_score
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d4ffebb452fe738b8aaa8005fc08a068 ===
[2025-10-29 20:25:35] INFO: Container 2a33aff1b4de660268fbd2c494ef4dcdfa8532a82ae50847a7da5bf5f89a2b20 has stopped
